[build-system]
requires = [
    "scikit-build-core",
    "pybind11",
]
build-backend = "scikit_build_core.build"

[project]
name = "pyrothermel"
version = "0.1.2"
description = "Python bindings and API for Behave extended Rothermel fire models"
readme = "README.md"
authors = [
    { name = "Johnathan Tenny", email = "jt893@nau.edu" }
]
license = { file = "LICENSE.txt" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/j-tenny/pyrothermel"

[tool.scikit-build]
minimum-version = "0.7"
cmake.minimum-version = "3.15"
build-dir = "build"
wheel.packages = ["pyrothermel"]

[tool.scikit-build.cmake.define]
CMAKE_CXX_STANDARD = "17"