[metadata]
name = pyrothermel
version = 0.0.5
author = Johnathan Tenny
author_email = jt893@nau.edu
description = Python bindings and API for Behave extended Rothermel fire models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/j-tenny/pyrothermel
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C++
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
